Enhance project structure and linting capabilities: Added new linting scripts for both backend and frontend, improved package.json configurations, and updated server logging for better clarity. Refactored middleware imports for consistency and streamlined error handling in service methods.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "db:migrate": "cd backend && npm run db:migrate",
     "db:seed": "cd backend && npm run db:seed",
     "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "lint": "npm run lint:backend && npm run lint:frontend",
+    "lint:backend": "cd backend && npm run lint",
+    "lint:frontend": "cd frontend && npm run lint",
     "lint:actions": "./actionlint --config-file .github/actionlint.yml",
     "lint:actions:verbose": "./actionlint --config-file .github/actionlint.yml -verbose"
   },
