--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "echo 'Backend build completed - no transpilation needed'",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
