--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "axios": "^1.3.0",
     "tailwindcss": "^3.2.0",
     "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.0"
+    "@heroicons/react": "^2.0.0",
+    "workbox-webpack-plugin": "^6.5.4",
+    "workbox-window": "^6.5.4"
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
