Update VSCode settings for Python testing configuration: Added pytest arguments for frontend testing, enabled pytest, and disabled unittest integration to streamline the testing process.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "cursor.composer.queueMessageDefaultBehavior": "queue",
-    "cursor.composer.shouldChimeAfterChatFinishes": true
+    "cursor.composer.shouldChimeAfterChatFinishes": true,
+    "python.testing.pytestArgs": [
+        "frontend"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
