Enhance PWA and Service Worker: Added comprehensive improvements to the PWA structure, including enhanced service worker functionalities, improved caching strategies, and better error handling. Introduced new offline support features, updated manifest and browser configuration, and refined user experience elements. Additionally, integrated new files for improved branding and offline handling, ensuring a robust and user-friendly application.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 node_modules
+frontend/public/oracleJdk-25/conf/management/jmxremote.password.template
+frontend/public/oracleJdk-25/conf/sound.properties
+frontend/public/oracleJdk-25/conf/management/jmxremote.access
+frontend/public/oracleJdk-25/conf/logging.properties
+frontend/public/oracleJdk-25/conf/security/java.security
+frontend/public/oracleJdk-25/conf/management/management.properties
+.gitignore
+frontend/public/oracleJdk-25/conf/net.properties
+.gitignore
+frontend/public/oracleJdk-25/bin/jstat
+.gitignore
+.gitignore
+frontend/public/oracleJdk-25/bin/jarsigner
+.gitignore
+frontend/public/oracleJdk-25/bin/java
+frontend/public/oracleJdk-25/bin/jconsole
+frontend/public/oracleJdk-25/bin/javadoc
+frontend/public/oracleJdk-25/bin/javap
