--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,30 +13,30 @@
     "dev": "npm start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.0",
+    "@heroicons/react": "^2.0.0",
+    "axios": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
-    "axios": "^1.3.0",
     "tailwindcss": "^3.2.0",
-    "@headlessui/react": "^1.7.0",
-    "@heroicons/react": "^2.0.0",
     "workbox-webpack-plugin": "^6.5.4",
     "workbox-window": "^6.5.4"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/jest-dom": "^5.16.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.55.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^5.16.0",
-    "@testing-library/user-event": "^14.4.0",
-    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "@tailwindcss/aspect-ratio": "^0.4.0"
+    "react-scripts": "^5.0.1"
   },
   "browserslist": {
     "production": [
