--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ frontend/public/oracleJdk-25/lib/jexec
 frontend/public/oracleJdk-25/lib/jrt-fs.jar
 frontend/public/oracleJdk-25/lib/ct.sym
 frontend/public/oracleJdk-25/lib/classlist
+backend/payments/.eslintrc.js
