Update package dependencies in package.json and package-lock.json. Added new dependencies including @microsoft/microsoft-graph-client, @sendgrid/mail, axios, googleapis, stripe, and twilio. Updated existing dependencies for improved functionality and security.

--- a/backend/package.json
+++ b/backend/package.json
@@ -40,39 +40,45 @@
   "author": "School SIS Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@sendgrid/mail": "^8.1.6",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "express-rate-limit": "^7.1.5",
-    "express-validator": "^7.0.1",
-    "pg": "^8.11.3",
-    "uuid": "^9.0.1",
-    "joi": "^17.11.0",
-    "multer": "^1.4.5-lts.1",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
+    "googleapis": "^128.0.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "winston": "^3.11.0",
-    "express-winston": "^4.2.0"
+    "pg": "^8.11.3",
+    "stripe": "^14.25.0",
+    "twilio": "^4.23.0",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
-    "supertest": "^6.3.3",
-    "nodemon": "^3.0.2",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@types/jest": "^29.5.8",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.54.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.6.0",
-    "@types/jest": "^29.5.8",
-    "babel-jest": "^29.7.0",
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
-    "jest-watch-typeahead": "^2.2.2"
+    "jest": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
+    "nodemon": "^3.0.2",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
