--- a/backend/package.json
+++ b/backend/package.json
@@ -61,9 +61,11 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
+    "sharp": "^0.34.4",
     "stripe": "^14.25.0",
     "twilio": "^4.23.0",
     "uuid": "^9.0.1",
+    "validator": "^13.15.15",
     "winston": "^3.11.0"
   },
   "devDependencies": {
