--- a/backend/package.json
+++ b/backend/package.json
@@ -55,13 +55,13 @@
     "express-winston": "^4.2.0",
     "googleapis": "^128.0.0",
     "helmet": "^7.1.0",
-    "joi": "^17.11.0",
+    "joi": "~17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
-    "sharp": "^0.34.4",
+    "sharp": "~0.34.4",
     "stripe": "^14.25.0",
     "twilio": "^4.23.0",
     "uuid": "^9.0.1",
