--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
-    "joi": "^18.0.1",
+    "joi": "~17.13.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "node-cron": "^4.2.1",
