--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
     "axios": "^1.3.0",
+    "chart.js": "^4.2.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.5",
     "react-router-dom": "^6.8.0",
     "tailwindcss": "^3.2.0",
     "workbox-webpack-plugin": "^6.5.4",
